--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "better-sqlite3": "^7.5.3",
     "dotenv": "^16.0.1",
     "hmacsha1": "^1.0.0",
     "twit": "^2.2.11"
